<resources>
    <string name="app_name">PremierLeagueApp</string>

    <string name="text_Team">Pick Team</string>
    <string name="text_Fixtures">Fixtures</string>
    <string name="text_Results">Results</string>
    <string name="text_Table">Table</string>
    <string name="text_Home">Home</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="text_login">Login</string>
    <string name="text_password">Password</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="success_message">Registration Successful</string>
</resources>
